fix: spacing around the columns and the grid on the index page. aligned text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,10 @@ h2,
 h3 {
   margin-bottom: 20px;
 }
+
+p {
+  text-align: justify;
+}
 /*-------------------------------------------------------------------------------- navbar */
 
 .navbar {
@@ -153,6 +157,16 @@ h3 {
 
 .footer-container {
   text-align: center;
+}
+
+div.col-12.col-lg-3 {
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
+.join-us p{
+  text-align: center;
+
 }
 
 /*-------------------------------------------------------------------------------- Cards  */
